<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btAct01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/act01"
        android:onClick="ejecutarActividad"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <Button
        android:id="@+id/btAct02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/act02"
        android:onClick="ejecutarActividad"
        app:layout_constraintTop_toBottomOf="@id/btAct01"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <Button
        android:id="@+id/btAct03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/act03"
        android:onClick="ejecutarActividad"
        app:layout_constraintTop_toBottomOf="@id/btAct02"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <Button
        android:id="@+id/btAct04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/act04"
        android:onClick="ejecutarActividad"
        app:layout_constraintTop_toBottomOf="@id/btAct03"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <Button
        android:id="@+id/btSalir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="35dp"
        android:text="@string/salir"
        android:onClick="ejecutarActividad"
        app:layout_constraintTop_toBottomOf="@id/btAct04"
        app:layout_constraintLeft_toLeftOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>