<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".Actividad1">

    <TextView
        android:id="@+id/lblNom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nom"
        android:textSize="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/txtNom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblNom"
        />

    <TextView
        android:id="@+id/lblApe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Apellidos: "
        android:textSize="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtNom"
        />

    <EditText
        android:id="@+id/txtApe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblApe"
        />

    <Button
        android:id="@+id/btVerificar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verificar"
        android:textSize="18dp"
        android:onClick="verficarDatos"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtApe"
        />

    <TextView
        android:id="@+id/lblVerificar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aceptas_condiciones"
        android:textSize="23dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btVerificar"
        />

    <Button
        android:id="@+id/btVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:drawableLeft="@mipmap/volver"
        android:text="@string/volver"
        android:onClick="volver0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblVerificar" />


</androidx.constraintlayout.widget.ConstraintLayout>